@@ -37,3 +37,6 @@ Upgrader crashed: C:\Users\alexasus\.config\git-annex\program: openFile: does no
 I've barely just installed. So I'm gonna get going these days. That warning doesn't seem to be an issue so far. I've looked it up but couldn't find any other reports for that warning.
 
 
+
+> [[fixed|done]] (by skipping checking upgrades on OS's where it's not
+> supported) --[[Joey]]
