@@ -13,6 +13,8 @@ git-annex (8.20201117) UNRELEASED; urgency=medium
     the stderr pipe to it was left open, due to a daemon having inherited
     the file descriptor.
   * Fix build on Windows.
+  * Prevent windows assistant from trying (and failing) to upgrade
+    itself, which has never been supported on windows.
 
  -- Joey Hess <id@joeyh.name>  Mon, 16 Nov 2020 09:38:32 -0400
 
